Updated auth controller with swagger annotations, renamed delete methods, and modified routes and swagger.json file
