# class-notes/21-PersonelApi_Logs_Documents/src/controllers/auth.js
@@ -10,7 +10,6 @@ const Token = require('../models/token')
 // Seesion 
 
 module.exports = {
-
     login: async (req, res) => {
 
         const { email, password } = req.body
@@ -64,7 +63,6 @@ module.exports = {
             message: 'Logout is completed.'
         })
     },
-
 }
 
 /* ------------------------------------------------------- */
@@ -73,6 +71,20 @@ module.exports = {
 module.exports = {
 
     login: async (req, res) => {
+        /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Login'
+            #swagger.description = 'Login with username and password'
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    username: '*String',
+                    password: '*String',
+                    email: '*String',
+                }
+            }
+        */
 
         const { username, password } = req.body
 
@@ -122,6 +134,12 @@ module.exports = {
     },
 
     logout: async (req, res) => {
+
+        /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Logout'
+            #swagger.description = 'Delete token.'
+        */
 
         const data = req.user ? await Token.deleteOne({ userId: req.user._id }) : null
 
